--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h2>ML Methods for Engineering Data Analysis</h2>
             <p>I took TAMU's MEEN 423 machine learning class in the spring of 2025.  I completed two projects for the class that utilized machine learning techniques to analyze complex datasets.  One was evaluating stess-strain relationships and one in financial time-series analysis.   </p>
             <a href="projects/meen423.html">Read More</a>
-            <a href="https://github.com/Agu303/MEEN423_AG" target="_blank">Github Repo</a>
+            <a href="https://github.com/Agu303/MEEN-Machine-Learning" target="_blank">Github Repo</a>
         </div>
 
         <!-- 
