--- a/projects/about.html
+++ b/projects/about.html
@@ -19,7 +19,7 @@
             <a href="../index.html">Home</a>
             <a href="../files/Resume.pdf">Resume</a>
             <a href="https://github.com/Agu303" target="_blank">Github</a>
-            <a href="https://youtube.com/" target="_blank">Youtube</a>
+            <a href="https://www.youtube.com/@AG_1729-e" target="_blank">Youtube</a>
         </nav>
     </header>
 
