--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -43,7 +43,7 @@
         <h3 style="color:#ffffff;">| My Role &amp; Scope</h3>
         <ul style="color:#ffffff; font-size:1.3rem;">
             <li><strong>Led a 12‑person sub‑team</strong> through requirements, CAD, FEA, and manufacturing.</li>
-            <li>Developed an internal <em>composite design toolbox</em> (Python) that cut laminate sizing time by&nbsp;60 %.</li>
+            <li>Developing an internal <em>composite design toolbox</em> (Python) for rocket laminate design efficiency</li>
             <li>Mentored team in SolidWorks, ANSYS Mechanical, Classical Lamination Theory, and Tsai‑Wu failure envelopes.</li>
         </ul>
 
