--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
             <a href="https://github.com/Agu303/MEEN-Machine-Learning" target="_blank">Github Repo</a>
         </div>
 
+        <div class="project-card">
+            <img src="images/acad2_NACA-63A010 Airfoil.png" alt="airfoil">
+            <h2>Academic CAD Projects</h2>
+            <p>Two projects that involved CAD design and analysis for different engineeing applications.</p> 
+        </div>
+        
         <!-- 
         <div class="project-card">
             <img src="images/pcb.jpg" alt="pcb">
