--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
             <img src="images/acad2_NACA-63A010 Airfoil.png" alt="airfoil">
             <h2>Academic CAD Projects</h2>
             <p>Two projects that involved CAD design and analysis for different engineeing applications.</p> 
+            <a href="projects/AcademicProj.html">Read More</a>
         </div>
-        
+
         <!-- 
         <div class="project-card">
             <img src="images/pcb.jpg" alt="pcb">
