--- a/projects/gcr.html
+++ b/projects/gcr.html
@@ -63,12 +63,12 @@ The final prototype successfully achieved its core objectives. The robot feature
                 </tr>
             </thead>
             <tbody>
-                <tr><td>Chassis</td><td>8020 alu extrusion + ABS/PETG panels</td><td>Modular &amp; weather-resistant</td><td>80/20 Inc.</td></tr>
-                <tr><td>Drivetrain</td><td>2 × 12 V DC gear-motors + chain &amp; sprocket</td><td>High torque, tight turns</td><td>Pololu / Tsubaki</td></tr>
-                <tr><td>Watering</td><td>12 V water pumps + PVC piping</td><td>Precise metering</td><td>Autobonics</td></tr>
-                <tr><td>Fertilizing</td><td>Venturi spray nozzle</td><td>Uniform coverage</td><td>Custom</td></tr>
-                <tr><td>Controller</td><td>Arduino Uno (master) + Nano (slave) + nRF24L01</td><td>Low-latency RF</td><td>Arduino / Nordic</td></tr>
-                <tr><td>Power</td><td>12 V 9 Ah LiFePO₄</td><td>Long endurance</td><td>Bioenno Power</td></tr>
+                <tr><td>Chassis</td><td>8020 alu extrusion + ABS/PETG panels</td><td>Modular &amp; weather-resistant</td><td>McMaster-Carr</td></tr>
+                <tr><td>Drivetrain</td><td>2 × 12 V DC gear-motors + chain &amp; sprocket</td><td>High torque, tight turns</td><td>Amazon</td></tr>
+                <tr><td>Watering</td><td>12 V water pumps + plastic hoses</td><td>Precise metering</td><td>Amazon</td></tr>
+                <tr><td>Fertilizing</td><td>Turf Builder Dispenser</td><td>Uniform coverage</td><td>Scotts (Modified with Electronics)</td></tr>
+                <tr><td>Controller</td><td>Arduino Uno (master) + Nano (slave) + Raspberry Pi</td><td>Robot Control & Actuation</td><td>Amazon</td></tr>
+                <tr><td>Power</td><td>12 V 12 Ah Battery</td><td>Long endurance</td><td>Duracell</td></tr>
             </tbody>
         </table>
         </div>
