--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -82,7 +82,7 @@
         <ul style="color:#ffffff;">
             <li><strong>Flight modelling</strong> – OpenRocket &amp; RASAero II predict apogee 12,172 ft AGL @ Mach 0.924
                 with 5.53 cal stability margin.</li>
-            <li><strong>FEA</strong> – onsgoing analysis with ANSYS Static Structural... </li>
+            <li><strong>FEA</strong> – Ongoing analysis with ANSYS Static Structural... </li>
         </ul>
         <br>
         <br>
