--- a/projects/rocketry.html
+++ b/projects/rocketry.html
@@ -122,7 +122,7 @@
         <hr style="border:0;border-top:1px solid #666;margin:3rem 0;">
 
         <p style="color:#ffffff;text-align:center;font-weight:bold;">
-            TL;DR – Led structures on a 10k ft hybrid rocket, validated 2.5 × SF composites, mentored 12 engineers, and will put the vehicle on the pad at IREC 2025.
+            TL;DR – Led structures on a 10k ft hybrid rocket, mentored 12 engineers, and will put the vehicle on the pad at IREC 2025.
         </p>
 
         <hr style="border:0;border-top:1px solid #757575;margin:3rem 0;">
